<resources>
    <string name="app_name">Worknasi Demo 5</string>


    <string-array name="Location">
        <item>Any</item>
        <item>Ada State</item>
        <item>Msasani Village</item>
        <item>Mwananyamala</item>
        <item>Vijana Tower</item>
    </string-array>

    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="Property_type">Property Type</string>

    <string-array name="cities">
        <item>Dar es salaam</item>
        <item>Dodoma</item>
        <item>Mwanza</item>
        <item>Arusha</item>
        <item>Morogoro</item>
        <item>Mbeya</item>
    </string-array>

    <string-array name="officeTypes">
        <item>Meeting Rooms</item>
        <item>Board Rooms</item>
        <item>Private Offices</item>
    </string-array>

    <string name="search">SEARCH</string>

    <string name="title_account">Account</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="login_username">username</string>
    <string name="login_password">password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget account/password</string>
    <string name="register">Register</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="phoneNo">mobile</string>
    <string name="email">email</string>
    <string name="confirm_password">confirm password</string>
    <string name="mobile">mobile</string>
    <string name="registration_form">Registration Form</string>
    <string name="room_title">Title of the room</string>
    <string name="room_type">(Room Type)</string>
    <string name="from">From</string>
    <string name="TSH">Tsh</string>
    <string name="price_default">145000</string>
    <string name="rent_duration">per hour</string>
    <string name="account_text">Already have an account?</string>
    <string name="click_here">CLICK HERE</string>

    <string name="currency">Tsh.</string>
    <string name="default_price">145000.00</string>
    <string name="default_duration">per hour</string>

    <string name="notifications">Notifications</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="favourites">Favourites</string>
    <string name="terms">Terms and privacy policy</string>
    <string name="help">Help and feedback</string>
    <string name="location">Location</string>

</resources>
