<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray">

    <RelativeLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/register_area"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:maxLength="30"
                    android:inputType="textPersonName"
                    android:background="@drawable/edit_login_background"
                    />

                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:maxLength="30"
                    android:inputType="textPersonName"
                    android:background="@drawable/edit_login_background"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_username"
                    android:maxLength="30"
                    android:inputType="textPersonName"
                    android:background="@drawable/edit_login_background"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:id="@+id/phoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phoneNo"
                    android:maxLength="50"
                    android:inputType="phone"
                    android:background="@drawable/edit_login_background"
                    android:layout_marginTop="10dp"
                    />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:maxLength="50"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/edit_login_background"
                    android:layout_marginTop="10dp"
                    />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password"
                    android:maxLength="15"
                    android:inputType="textPassword"
                    android:background="@drawable/edit_login_background"
                    android:layout_marginTop="10dp"
                     />

                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:maxLength="15"
                    android:inputType="textPassword"
                    android:background="@drawable/edit_login_background"
                    android:layout_marginTop="10dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/button_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp">

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="220dp"
                    android:layout_height="35dp"
                    android:text="@string/register"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:background="@color/colorPrimary"
                    android:layout_gravity="center"/>

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</ScrollView>
