<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    card_view:cardCornerRadius="4dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="8dp"
    android:layout_marginLeft="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:elevation="8dp">

        <ImageView
            android:id="@+id/office_room_image"
            android:layout_width="152dp"
            android:layout_height="85.88dp"
            android:adjustViewBounds="true"
            android:background="#D2D2D2"
            android:layout_marginRight="5dp"
            android:layout_alignParentLeft="true"
            android:scaleType="centerCrop"
            android:layout_alignParentTop="true"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/office_room_image"
            android:layout_alignTop="@id/office_room_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/roomTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/room_title"/>

            <TextView
                android:id="@+id/roomType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/room_type"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--<TextView
                    android:id="@+id/from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from"/> -->

                <TextView
                    android:id="@+id/tsh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currency"/>

                <TextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_price"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/perHourIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_access"/>
                <TextView
                    android:id="@+id/duration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="3dp"
                    android:text="@string/default_duration"/>
            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>



</android.support.v7.widget.CardView>