<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <LinearLayout
        android:id="@+id/topLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hapticFeedbackEnabled="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/office_room_image"
            android:layout_width="match_parent"
            android:layout_height="157.71dp"
            android:background="#D2D2D2"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/roomTitle"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:text="Office Name"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="4dp"
            android:id="@+id/roomType"
            android:text="Office Type"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"/>

            <TextView
                android:id="@+id/tsh"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TSH"/>

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/price_default"
                android:textSize="16sp"
                android:textColor="#FF4C05"
                android:textStyle="bold"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_access"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/duration"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="@string/rent_duration"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_below="@id/topLinear"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/white_grey_border_bottom"/>

</RelativeLayout>